examples/test/testpolicy17631.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17631
  namespace: namespace10
spec:
  podSelector:
    matchLabels:
      key42: value9
      key34: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value40
          key19: value34
      podSelector:
        matchLabels:
          key18: value45
